# ircdenoise

./: NEWS  README  configure.ac
src/: Makefile.am  dbg.h  ircdenoise.c  msghandle.c  msghandle.h
